--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "koa-logger": "^3.2.1",
     "koa-router": "^10.0.0",
     "koa2-cors": "^2.0.6",
+    "mongodb-memory-server": "^6.9.6",
     "mongoose": "^5.12.12",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.2"
   },
   "devDependencies": {
+    "@types/mongodb-memory-server": "^2.3.0",
     "supertest": "^6.1.3",
     "@types/jest": "^26.0.23",
     "@types/koa": "^2.13.2",
@@ -41,7 +43,13 @@
   "keywords": [],
   "author": "Andromeda",
   "license": "ISC",
+  "config": {
+    "mongodbMemoryServer": {
+      "debug": "0"
+    }
+  },
   "jest": {
+    "testTimeout": 1000000,
     "verbose": true,
     "collectCoverage": true,
     "modulePathIgnorePatterns": [
