--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "joi": "^17.4.0",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.1",
     "koa-bodyparser": "^4.3.0",
     "koa-combine-routers": "^4.0.2",
     "koa-json": "^2.0.2",
+    "koa-jwt": "^4.0.1",
     "koa-logger": "^3.2.1",
     "koa-router": "^10.0.0",
     "koa2-cors": "^2.0.6",
@@ -25,18 +27,19 @@
     "typescript": "^4.3.2"
   },
   "devDependencies": {
-    "@types/mongodb-memory-server": "^2.3.0",
-    "supertest": "^6.1.3",
     "@types/jest": "^26.0.23",
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/koa": "^2.13.2",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-json": "^2.0.18",
     "@types/koa-logger": "^3.1.1",
     "@types/koa-router": "^7.4.2",
     "@types/koa2-cors": "^2.0.1",
+    "@types/mongodb-memory-server": "^2.3.0",
     "@types/node": "^15.6.1",
     "@types/supertest": "^2.0.11",
     "jest": "^27.0.1",
+    "supertest": "^6.1.3",
     "ts-jest": "^27.0.1",
     "ts-node-dev": "^1.1.6"
   },
