Database: env.DB_URI takes preceedence over other `DB_*` vars

--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,8 @@ APP_SECRET="secret"
 ADMIN_PASSWORD="secret"
 
 # Database
-
+## If available, DB_URI is preferred over other db vars
+# DB_URI=""
 DB_HOST="localhost"
 DB_PORT=27019
 DB_DATABASE=habitus
