--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc --build",
-    "start": "ts-node-dev src/index.ts",
+    "dev": "ts-node-dev src/index.ts",
+    "start": "ts-node --transpile-only src/index.ts",
     "test": "NODE_ENV=test PORT=7788 jest",
     "test:watch": "npm run test -- --watchAll"
   },
